--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,9 @@
 .input-con{
     @apply border border-gray-600 rounded-lg overflow-hidden p-2 lg:p-4 mt-6;
 }
+.error{
+    @apply text-red-600 text-lg sm:text-2xl text-center;
+}
 .label{
     @apply text-xl;
 }
