--- a/src/index.css
+++ b/src/index.css
@@ -167,5 +167,5 @@
     @apply text-xl sm:text-2xl font-semibold;
 }
 .session-input{
-    @apply outline-none border border-gray-400 w-11/12 md:w-2/3 p-1 rounded-lg;
+    @apply outline-none border border-gray-400 w-11/12 md:w-2/3 p-1 rounded-lg placeholder:text-yellow-400;
 }
